21.14 Агрегатный метод reduce()